[package]
name = "handflip-bin"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[[bin]]
name = "handflip"
path = "src/main.rs"

[dependencies]
handflip-core = { version = "0.1.0", path = "../handflip-core" }
log = "0.4"
env_logger = "0.7.1"
smol = "1.0.1"
anyhow = "1.0.32"
async-h1 = "2.1.2"
http-types = "2.4.0"
structopt = "0.3.17"
